Fix: chapter content overflow
On smaller screens the chapter content elements of the container were clipping and/or overflowing outside the div.

This compromised readibilty and made parts of the text incomprehensible.

Added overflow-y: scroll to maintain consistency on all screen sizes.

Used padding to create space around the div to maintain readibility.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -265,9 +265,11 @@ body {
     display: inline-flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
 
     text-align: center;
+
+    overflow-y: scroll;
+    padding: 10% 5% 5% 5%;
 }
 
 .chapter-title-bg-2 {
